<resources>
    <string name="app_name">健人福利社</string>

    <string name="title_home">首頁</string>
    <string name="title_mall">依和商城</string>
    <string name="title_booking">預約</string>
    <string name="title_map">附近</string>
    <string name="title_member">會員中心</string>
    <string name="title_cart">購物車</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="exit_app">是否要離開</string>
    <string name="exit">離開</string>
    <string name="confirm">確定</string>
    <string name="cancel">取消</string>
    <string name="error_default">系統忙碌中，請稍後再試</string>
    <string name="error_camera">開啟相機失敗，請稍後再試</string>

    <string name="recommended_code">推薦碼</string>

    <string name="none_data">--</string>
    <string name="none_data2">-- </string>

    <!-- 首頁 -->
    <string name="instruction">說明</string>
    <string name="current_reward_point">累積紅利點數</string>
    <string name="point">點</string>
    <string name="more_health_data">更多健康數據</string>
    <string name="my_reservation">我的預約</string>
    <string name="reservation_none">無預約資料</string>
    <string name="reservation_watch_none">無測量數據</string>
    <string name="booking_now">馬上預約</string>
    <string name="eecp_data">EECP數據</string>
    <string name="examination_result">檢查結果</string>
    <string name="examination_data_none">無檢查資料</string>
    <string name="result_detail">詳細結果</string>
    <string name="band_data">手環數據</string>
    <string name="detailed_data">詳細數據</string>
    <string name="step">步</string>
    <string name="bpm_unit">BPM</string>
    <string name="percent">%</string>
    <string name="heart_rate">心率：</string>
    <string name="blood_oxygen">血氧：</string>
    <string name="steps">步數：</string>
    <string name="heartbeat_time">心跳時間：</string>
    <string name="body_age">身體年齡：</string>
    <string name="asi">ASI：</string>
    <string name="abi">ABI：</string>
    <string name="promotions">優惠活動</string>
    <string name="discount_products">推薦商品</string>
    <string name="more_products">更多商品</string>
    <string name="notification">通知</string>
    <string name="watchsetting">手環裝置設定</string>

    <!-- 會員中心 -->
    <string name="reservation_record">預約記錄</string>
    <string name="measurement_record">測量記錄</string>
    <string name="my_order">我的訂單</string>
    <string name="my_favorite">我的收藏</string>

    <string name="member_info">會員資料修改</string>
    <string name="password_chang">密碼修改</string>
    <string name="my_ticket">我的票劵</string>
    <string name="coupon">優惠券</string>
    <string name="reward_record">紅利點數紀錄</string>
    <string name="terms_policy">協議及聲明</string>
    <string name="frequently_asked_questions">常見問題</string>
    <string name="logout">登出</string>
    <string name="login">登入</string>

    <string name="go_album">相簿上傳</string>
    <string name="open_camera">拍照上傳</string>
    <string name="delete_photo">刪除照片</string>
    <string name="choose_one_photo">請選擇上傳方式</string>
    <string name="copy">複製</string>
    <string name="copied">已複製到剪貼簿</string>

    <string name="text_10">壹貳参肆伍陸柒捌玖拾</string>
    <string name="text_30">壹貳参肆伍陸柒捌玖拾壹貳参肆伍陸柒捌玖拾壹貳参肆伍陸柒捌玖拾</string>
    <string name="text_100">壹貳参肆伍陸柒捌玖拾貳貳参肆伍陸柒捌玖拾参貳参肆伍陸柒捌玖拾肆貳参肆伍陸柒捌玖拾伍貳参肆伍陸柒捌玖拾陸貳参肆伍陸柒捌玖拾柒貳参肆伍陸柒捌玖拾玖貳参肆伍陸柒捌玖拾玖貳参肆伍陸柒捌玖拾拾貳参肆伍陸柒捌玖拾</string>

    <string name="proj_scheme">ehoapp</string>
    <string name="bp_context">
        <p>收縮壓正常值<hr />：<hr />90MMHG&lt;<hr />收縮壓&lt;<hr />140MMHG</p>\n<p>舒張壓正常值：60MMHG &lt;<hr />舒張壓&lt;<hr />90MMHG</p>
    </string>

    <string name="oxygen_note_title">血氧飽和度說明</string>
    <string name="oxygen_note_content">血氧飽和度是血液中血氧的濃度，它是呼吸循環的重要生理指標。血液中氧和血紅蛋白的容量占全部可結合的血紅蛋白容量的百分比。<br/>正常動脈血氧飽和度約96~99%</string>
    <string name="oxygen_last_7_test_title">近7次血氧飽和度測量</string>

    <string name="sleep_note_content">睡眠品質是從手環測得睡眠規律，時間，深度睡眠，夜裡醒來次數和清醒時間等因子後，以匹茲堡睡眠指數計算而成</string>

    <string name="watch_health_data_label">手環檢測</string>
    <string name="step_count">步數</string>
    <string name="sleep">睡眠</string>
    <string name="heartrate">心率</string>
    <string name="blood_pressure">血壓</string>
    <string name="oxygen">血氧飽和度SPO2</string>
    <string name="ecg">心電圖ECG</string>
    <string name="sport_record">運動紀錄</string>
    <string name="dbp_sbp_label">收縮壓/舒張壓</string>
    <string name="dbp">收縮壓</string>
    <string name="sbp">舒張壓</string>
    <string name="bp_unit">MMHG</string>
    <string name="step_unit">步</string>
    <string name="hr_unit">次/分</string>
    <string name="meter_unit">米</string>
    <string name="carolie">千卡</string>
    <string name="oxygen_unit">%</string>
    <string name="minute">分鐘</string>
    <string name="minute_unit">分</string>
    <string name="hour_unit">時</string>
    <string name="no_data">-</string>

    <string name="bonded_device">已配對裝置</string>
    <string name="unbond_device">解除綁定</string>
    <string name="scan_not_found">未找到裝置</string>
    <string name="rescan">重新搜尋</string>
    <string name="heartrate_fullday">全天心率</string>
    <string name="time_format">時間格式</string>
    <string name="language_setting">語言設置</string>
    <string name="time_format_24_setting">24小時制</string>
    <string name="time_format_12_setting">12小時制</string>
    <string name="watch_reboot">手環重啟</string>
    <string name="language_chiness">繁體中文</string>
    <string name="language_english">英文</string>

    <string name="cut">裁切</string>
    <string name="camera">照相</string>
    <string name="gallery">圖庫</string>

    <string name="msg_image_from">請選擇照片來源</string>
<!--    <string name="errmsg_cannot_connect_watch">與手錶[%1$s]連線失敗</string>-->
    <string name="errmsg_cannot_connect_watch">此手環已被其他帳戶綁定，請先解綁或嘗試連線其他手環，或確認您的手環狀態</string>

    <string name="ecg_start">請戴緊設備，使底殼的金屬片緊貼手腕皮膚，並將手指接觸到設備的正面或側面的金屬片，保持安靜並開始測試！</string>
    <string name="watch_reboot_sure">確定要重啟嗎 ?</string>
    <string name="ecg_start_ok">開始測試</string>
    <string name="ecg_start_title">佩戴提示</string>
</resources>