<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.wristband.Oxy.OxyFragment">

<include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <View
            android:id="@+id/view3"
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:background="@drawable/shape_rounded_oxygen"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            style="@style/ivHomeTabIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_oxygen"
            app:layout_constraintBottom_toBottomOf="@+id/view3"
            app:layout_constraintEnd_toEndOf="@+id/view3"
            app:layout_constraintStart_toStartOf="@+id/view3"
            app:layout_constraintTop_toTopOf="@+id/view3" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/view3"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="血氧飽和度"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvOxygenTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="-" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvOxygenValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:text="-"
                    android:textColor="#ade659"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="%"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="血氧飽和度"
                android:textStyle="bold" />

            <eho.jotangi.com.ui.wristband.view.HorizontalColorBar
                android:id="@+id/hcbvOxygen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvOxygenDesc"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:strokeColor="#AFE65B"
        app:strokeWidth="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#AFE65B">

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#D9FFFFFF" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/view">

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/oxygen_note_title"
                    android:textColor="#AFE65B"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/oxygen_note_content"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <eho.jotangi.com.ui.wristband.view.ColorBarChartView
        android:id="@+id/cbcvOxygen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="16dp"
        android:fillViewport="true"
        app:layout_constraintDimensionRatio="19:10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvOxygenDesc">
    </eho.jotangi.com.ui.wristband.view.ColorBarChartView>

    <TextView
        android:id="@+id/textView156"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/oxygen_last_7_test_title"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/cbcvOxygen"
        app:layout_constraintStart_toStartOf="@+id/cvOxygenDesc"
        app:layout_constraintTop_toBottomOf="@+id/cvOxygenDesc"
        app:layout_constraintVertical_bias="0.548" />

    <Button
        android:id="@+id/bnOxygenStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/shape_rounded_oxygen"
        android:text="點擊開始測量血壓"
        android:textColor="#FFFFFF"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>